--- a/src/components/styles/Project.module.scss
+++ b/src/components/styles/Project.module.scss
@@ -17,5 +17,5 @@
 }
 
 .articleHeroImage {
-  margin-block: clamp(13rem, 3.25rem + 27.0833vw, 26rem);
+  margin: clamp(13rem, 3.25rem + 27.0833vw, 26rem) 0;
 }
